🐛 fix navigation bar spacing (hopefully)

--- a/src/components/NavigationLinks/NavigationLinks.module.scss
+++ b/src/components/NavigationLinks/NavigationLinks.module.scss
@@ -2,6 +2,9 @@
 
 .NavigationLinks {
   --highlight-color : $globalHighlightColor;
+  display: flex;
+ justify-content: center;
+  flex: 1;
 
   a {
     text-decoration: none;
