--- a/src/views/Navigation/Navigation.module.scss
+++ b/src/views/Navigation/Navigation.module.scss
@@ -2,12 +2,10 @@
 
 .Navigation {
   .navigationLinks {
-    all: inherit;
+    background-color: inherit;
     display: flex;
     position: fixed;
     bottom: 0;
-    justify-content: space-evenly;
-    align-items: center;
     width: 100vw;
   }
 }
